--- a/output.css
+++ b/output.css
@@ -606,46 +606,13 @@ video {
   border-radius: 0.375rem;
 }
 
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
-}
-
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(4 255 29 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-bl {
-  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.from-\[\#FFF\] {
-  --tw-gradient-from: #FFF;
-  --tw-gradient-to: rgb(255 255 255 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-purple-600 {
-  --tw-gradient-from: #9333ea;
-  --tw-gradient-to: rgb(147 51 234 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-\[\#FFFFFF\] {
@@ -656,14 +623,6 @@ video {
 
 .to-\[\#B5FFBD\] {
   --tw-gradient-to: #B5FFBD;
-}
-
-.to-blue-600 {
-  --tw-gradient-to: #2563eb;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
 }
 
 .p-8 {
@@ -705,6 +664,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -723,9 +687,8 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:from-\[\#B5FFBD\] {
-    --tw-gradient-from: #B5FFBD;
-    --tw-gradient-to: rgb(181 255 189 / 0);
-    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
